[package]
name = "vina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono="0"
regex="1"
indicatif="0.17"
clap = { version = "3.0", features = ["derive"] }
rustbus = "0.18.0"
humantime = "2.1.0"
